--- a/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/alpha-slider/alpha-slider.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/alpha-slider/alpha-slider.component.html
@@ -1,5 +1,5 @@
 <div class="mona-alpha-slider">
-    <div class="mona-alpha-slider-color" [style.background]="'linear-gradient(to top, transparent, '+color+')'"></div>
+    <div class="mona-alpha-slider-color" [style.background]="'linear-gradient(to right, transparent, '+color+')'"></div>
     <div class="mona-alpha-slider-transparency"></div>
     <div class="mona-alpha-slider-handle" #sliderHandle></div>
 </div>
