--- a/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/alpha-slider/alpha-slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/alpha-slider/alpha-slider.component.scss
@@ -1,7 +1,7 @@
 div.mona-alpha-slider {
     position: relative;
-    width: 12px;
-    height: 100%;
+    width: 100%;
+    height: 16px;
     border: 1px solid var(--mona-border-color);
     user-select: none;
 }
@@ -27,11 +27,9 @@ div.mona-alpha-slider-transparency {
 
 div.mona-alpha-slider-handle {
     height: 14px;
-    box-shadow: 0 0 0 2px white inset, 0 0 0 1px var(--mona-border-color), 0 0 0 3px var(--mona-border-color) inset;
-    margin-top: -8px;
-    margin-left: -2px;
+    box-shadow: 0 0 0 1px white inset, 0 0 0 1px var(--mona-border-color), 0 0 0 2px var(--mona-border-color) inset;
+    margin-left: -9px;
     position: absolute;
-    top: 160px;
     width: 14px;
     z-index: 3;
 }
