--- a/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/hue-slider/hue-slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/hue-slider/hue-slider.component.scss
@@ -1,18 +1,16 @@
 div.mona-hue-slider {
     position: relative;
-    width: 12px;
-    height: 100%;
+    width: 100%;
+    height: 16px;
     border: 1px solid var(--mona-border-color);
-    background: linear-gradient(to top, #ff0000, #ffff00, #00ff00, #00ffff, #0000ff, #ff00ff, #ff0000);
+    background: linear-gradient(to right, #ff0000, #ffff00, #00ff00, #00ffff, #0000ff, #ff00ff, #ff0000);
     user-select: none;
 }
 
 div.mona-hue-slider-handle {
     height: 14px;
-    box-shadow: 0 0 0 2px white inset, 0 0 0 1px var(--mona-border-color), 0 0 0 3px var(--mona-border-color) inset;
-    margin-top: -8px;
-    margin-left: -2px;
+    box-shadow: 0 0 0 1px white inset, 0 0 0 1px var(--mona-border-color), 0 0 0 2px var(--mona-border-color) inset;
+    margin-left: -9px;
     position: absolute;
-    top: 160px;
     width: 14px;
 }
