--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -722,7 +722,39 @@ input[type="checkbox"][monaCheckBox] {
 }
 
 /** Color Gradient */
+div.mona-color-gradient-color-area {
+    background: var(--mona-background-dark);
+    border: 1px solid var(--mona-border-color);
+}
 
+div.mona-hsv-rectangle {
+    border: 1px solid var(--mona-border-color);
+}
+
+div.mona-color-gradient-preview {
+    border: 2px solid var(--mona-border-color);
+}
+
+span.mona-color-gradient-hex-input-prefix {
+    font-family: monospace;
+    border-right: 1px solid var(--mona-border-color);
+    background-color: var(--mona-background-darker);
+}
+
+span.mona-color-gradient-value-input-prefix {
+    border-right: 1px solid var(--mona-border-color);
+    background-color: var(--mona-background-darker);
+    color: var(--mona-text);
+    font-family: monospace;
+}
+
+div.mona-hue-slider {
+    border: 1px solid var(--mona-border-color);
+}
+
+div.mona-alpha-slider {
+    border: 1px solid var(--mona-border-color);
+}
 
 /** Color Palette */
 .mona-color-palette {
