Add three predefined palettes

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -330,7 +330,7 @@
                                     </ng-template>
                                 </mona-switch>
 
-                                <mona-color-picker [palette]="colorPalette" [ngModel]="colorPickerValue"
+                                <mona-color-picker [ngModel]="colorPickerValue"
                                                    (ngModelChange)="onColorPickerValueChange($event)"></mona-color-picker>
                             </div>
                             <div style="display: flex; align-items: center;">
