--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -759,16 +759,11 @@ div.mona-alpha-slider {
 /** Color Palette */
 .mona-color-palette {
     & > div.mona-color-cell {
-        border: 2px solid black;
         &.mona-selected {
-            border: 1px solid lightgray;
-            width: calc(100% + 2px);
-            height: calc(100% + 2px);
-            margin-left: -1px;
-            margin-top: -1px;
+            box-shadow: 0 0 0 1px var(--mona-border-color) inset;
         }
         &:hover:not(.mona-selected) {
-            border: 1px solid black;
+            box-shadow: 0 0 0 1px var(--mona-border-color) inset;
         }
     }
 }
