--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -330,7 +330,8 @@
                                     </ng-template>
                                 </mona-switch>
 
-                                <mona-color-picker [ngModel]="colorPickerValue"
+                                <mona-color-picker [ngModel]="colorPickerValue" view="gradient" [palette]="colorPalette" [columns]="5"
+                                                   [opacity]="false"
                                                    (ngModelChange)="onColorPickerValueChange($event)"></mona-color-picker>
                             </div>
                             <div style="display: flex; align-items: center;">
