--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -331,7 +331,7 @@
                                 </mona-switch>
 
                                 <mona-color-picker [ngModel]="colorPickerValue" view="gradient" [palette]="colorPalette" [columns]="5"
-                                                   [opacity]="false"
+                                                   [opacity]="true"
                                                    (ngModelChange)="onColorPickerValueChange($event)"></mona-color-picker>
                             </div>
                             <div style="display: flex; align-items: center;">
@@ -432,13 +432,16 @@
                             </div>
 
                             <div style="display: flex; align-items: center; justify-content: center; margin-top: 40px;">
-                                <mona-slider orientation="horizontal" labelPosition="before" [max]="32" [(ngModel)]="sliderValue" style="width: 560px;">
-<!--                                    <ng-template monaSliderTickValueTemplate let-value>-->
-<!--                                        <fa-icon [icon]="moonIcon" *ngIf="value % 2 === 0"-->
-<!--                                                 style="color: mediumpurple;"></fa-icon>-->
-<!--                                        <fa-icon [icon]="sunIcon" *ngIf="value % 2 !== 0"-->
-<!--                                                 style="color: #fafd0f;"></fa-icon>-->
-<!--                                    </ng-template>-->
+                                <mona-slider orientation="horizontal" labelPosition="before" [max]="32"
+                                             [showTicks]="true" [showLabels]="true"
+                                             [disabled]="true"
+                                             [ngModel]="sliderValue" (ngModelChange)="onSliderValueChange($event)" style="width: 560px;">
+                                    <ng-template monaSliderTickValueTemplate let-value>
+                                        <fa-icon [icon]="moonIcon" *ngIf="value % 2 === 0"
+                                                 style="color: mediumpurple;"></fa-icon>
+                                        <fa-icon [icon]="sunIcon" *ngIf="value % 2 !== 0"
+                                                 style="color: #fafd0f;"></fa-icon>
+                                    </ng-template>
                                 </mona-slider>
                                 <mona-numeric-text-box [(ngModel)]="sliderValue" [min]="0" [max]="32"></mona-numeric-text-box>
                             </div>
@@ -461,13 +464,15 @@
                             </div>
 
                             <div style="display: flex; align-items: center; justify-content: center; margin-top: 40px;">
-                                <mona-slider orientation="vertical" labelPosition="before" [ngModel]="sliderValue" (ngModelChange)="print($event)" style="height: 400px; margin-right: 0;">
-<!--                                    <ng-template monaSliderTickValueTemplate let-value>-->
-<!--                                        <fa-icon [icon]="moonIcon" *ngIf="value % 2 === 0"-->
-<!--                                                 style="color: mediumpurple;"></fa-icon>-->
-<!--                                        <fa-icon [icon]="sunIcon" *ngIf="value % 2 !== 0"-->
-<!--                                                 style="color: #fafd0f;"></fa-icon>-->
-<!--                                    </ng-template>-->
+                                <mona-slider orientation="vertical" labelPosition="before" [ngModel]="sliderValue"
+                                             [showTicks]="true" [showLabels]="true" [labelStep]="2"
+                                             (ngModelChange)="onSliderValueChange($event)" style="height: 400px; margin-right: 0;">
+                                    <ng-template monaSliderTickValueTemplate let-value>
+                                        <fa-icon [icon]="moonIcon" *ngIf="value % 2 === 0"
+                                                 style="color: mediumpurple;"></fa-icon>
+                                        <fa-icon [icon]="sunIcon" *ngIf="value % 2 !== 0"
+                                                 style="color: #fafd0f;"></fa-icon>
+                                    </ng-template>
                                 </mona-slider>
                                 <mona-range-slider orientation="vertical"
                                                    [min]="0"
